| Summary: | ASTERISK-29372: file.c switch does not account for flash events | ||
| Reporter: | N A (InterLinked) | Labels: | patch |
| Date Opened: | 2021-03-29 09:09:11 | Date Closed: | 2021-05-17 08:53:51 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Core/General |
| Versions: | 18.3.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Debian 10 | Attachments: | ( 0) file.patch |
| Description: | There is a switch statement in file.c. that does not include AST_CONTROL_FLASH. As a result, anytime there is an RTP flash event, there is a WARNING printed to the console. This should be ignored in file.c; the attached patch simply adds AST_CONTROL_FLASH to the switch statement as a case so that it gets ignored properly. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2021-03-29 09:09:13.874-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: N A (InterLinked) 2021-03-29 09:09:35.532-0500 This patch resolves the issue. By: Joshua C. Colp (jcolp) 2021-03-29 09:11:23.767-0500 You don't appear to have a signed license agreement on file. If this is in progress then you will need to wait until accepted before attaching patches. If this has not been signed, then you will need to sign it for any contributions to Asterisk. By: N A (InterLinked) 2021-03-29 09:15:01.767-0500 This attached patch resolves this bug by aligning res_rtp_asterisk with what channel.c is expecting. By: N A (InterLinked) 2021-03-29 09:16:19.497-0500 Sorry, ignore the second attachment, that was for a different one. I signed a license agreement but I think legal still needs to process it. By: Joshua C. Colp (jcolp) 2021-03-29 09:17:33.815-0500 Then before attaching any patch to any issue you need to wait for legal to accept it. By: N A (InterLinked) 2021-04-02 14:51:03.871-0500 License agreement accepted, so patch can be processed. By: Kevin Harwell (kharwell) 2021-04-05 11:28:32.221-0500 Thanks for the contribution! If you'd like your contribution to be included faster, you should submit your patch for code review by the Asterisk Developer Community. To do so, please follow the Code Review [1] instructions on the wiki. Be sure to: * Verify that your patch conforms to the Coding Guidelines [2] * Review the Code Review Checklist [3] for common items reviewers will look for * If necessary, provide tests for the Asterisk Test Suite that verify the correctness of your patch [4] When ready, submit your patch and any tests to Gerrit [5] for code review. Thanks! [1] https://wiki.asterisk.org/wiki/display/AST/Code+Review [2] https://wiki.asterisk.org/wiki/display/AST/Coding+Guidelines [3] https://wiki.asterisk.org/wiki/display/AST/Code+Review+Checklist [4] https://wiki.asterisk.org/wiki/display/AST/Asterisk+Test+Suite+Documentation [5] https://wiki.asterisk.org/wiki/display/AST/Gerrit+Usage By: Kevin Harwell (kharwell) 2021-04-05 11:30:44.556-0500 {quote} This attached patch resolves this bug by aligning res_rtp_asterisk with what channel.c is expecting. ... Sorry, ignore the second attachment, that was for a different one. {quote} I'm going to remove the res_rtp_asterisk.patch then since it does not relate to this issue. By: Friendly Automation (friendly-automation) 2021-05-17 08:53:52.274-0500 Change 15878 merged by Joshua Colp: main/file.c: Don't throw error on flash event. [https://gerrit.asterisk.org/c/asterisk/+/15878|https://gerrit.asterisk.org/c/asterisk/+/15878] By: Friendly Automation (friendly-automation) 2021-05-17 08:55:15.713-0500 Change 15879 merged by Joshua Colp: main/file.c: Don't throw error on flash event. [https://gerrit.asterisk.org/c/asterisk/+/15879|https://gerrit.asterisk.org/c/asterisk/+/15879] By: Friendly Automation (friendly-automation) 2021-05-17 09:26:53.593-0500 Change 15888 merged by Friendly Automation: main/file.c: Don't throw error on flash event. [https://gerrit.asterisk.org/c/asterisk/+/15888|https://gerrit.asterisk.org/c/asterisk/+/15888] | ||