main/file.c
@@ -1702,6 +1702,7 @@ static int waitstream_core(struct ast_channel *c,
 				case AST_CONTROL_AOC:
 				case AST_CONTROL_UPDATE_RTP_PEER:
 				case AST_CONTROL_PVT_CAUSE_CODE:
+				case AST_CONTROL_FLASH:
 				case -1:
 					/* Unimportant */
 					break;
